# restartos-agentic-line-recovery

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  SOLUTION.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt  start_macos.command  start_windows.bat
.github/workflows/: ci.yml
config/: authorization_matrix.yaml  model_routing.yaml  settings.yaml
dataset/: generate.py
docs/: CALIBRATION.md  DEMO_GUIDE.md  END_TO_END.md  PROBLEM_ALIGNMENT.md  RECOVERY_WORK_PACKAGE.md  SAFETY_MODEL.md
eval/: incidents_labeled.jsonl
restartos/: __init__.py  actions.py  agent_loop.py  agents.py  audit.py  causal.py  cli.py  connectors.py  contracts.py  demo.py  domain.py  evals.py  evidence.py  gate.py  intake.py  lg.py  memory.py  orchestration.py  rag.py  security.py  server.py  shadow_mode.py  tools.py  verify.py
restartos/data/: __init__.py  adapters.py
restartos/llm/: __init__.py  providers.py  router.py
scripts/: deploy_fly.sh  snapshot_mvp.sh
tests/: regression_matrix.py  test_live_connectors.py  test_memory_qdrant.py  test_pipeline.py  test_wave1.py
ui/: app.html  app_standalone.html  cockpit.html  cockpit_standalone.html  demo.html  index.html  restartos_live.html  workbench.html  workbench_offline.html
