[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "restartos"
version = "2.0.0"
description = "Agentic line-recovery system for manufacturing — reads OT, writes IT, never actuates."
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
models = ["anthropic>=0.39", "openai>=1.40"]
graph = ["langgraph>=0.2", "crewai>=0.60"]
data = ["openpyxl>=3.1", "reportlab>=4.0", "pandas>=2.0"]
dev = ["pytest>=8.0"]

[project.scripts]
restartos = "restartos.cli:main"

[tool.setuptools.packages.find]
include = ["restartos*"]
